Return more information in the document listing, switch to using buffered streams
