# scriptos-server/src/main/kotlin/dev/piotrwyrw/scriptos/service/DocumentService.kt
@@ -1,16 +1,16 @@
 package dev.piotrwyrw.scriptos.service
 
+import com.fasterxml.jackson.databind.ObjectMapper
+import dev.piotrwyrw.scriptos.config.StorageConfig
 import dev.piotrwyrw.scriptos.exception.ScriptosException
 import dev.piotrwyrw.scriptos.persistence.model.DocumentEntity
 import dev.piotrwyrw.scriptos.persistence.repository.DocumentRepository
-import dev.piotrwyrw.scriptos.persistence.repository.MonitorRepository
 import dev.piotrwyrw.scriptos.util.currentUser
 import jakarta.transaction.Transactional
 import org.slf4j.LoggerFactory
 import org.springframework.core.io.ByteArrayResource
 import org.springframework.http.HttpStatus
 import org.springframework.stereotype.Service
-import org.springframework.transaction.support.TransactionTemplate
 import java.time.Instant
 
 @Service
@@ -19,7 +19,8 @@ class DocumentService(
     val groupService: GroupService,
     val monitorService: MonitorService,
     val storageService: StorageService,
-    val monitorRepository: MonitorRepository
+    val storageConfig: StorageConfig,
+    private val jacksonObjectMapper: ObjectMapper
 ) {
 
     val logger = LoggerFactory.getLogger(javaClass)
@@ -43,11 +44,34 @@ class DocumentService(
 
         val author = currentUser()!!
 
+        val extension: String
+
+        filename.split(".").let {
+            if (it.size <= 1)
+                throw ScriptosException(
+                    "Could not extract file extension from the given file",
+                    HttpStatus.UNPROCESSABLE_ENTITY
+                )
+
+            extension = it.last().lowercase()
+        }
+
+        if (!storageConfig.acceptedExtensions.contains(extension.uppercase()))
+            throw ScriptosException(
+                "The extension '$extension' is not allowed. Acceptable extensions are ${
+                    jacksonObjectMapper.writeValueAsString(
+                        storageConfig.acceptedExtensions
+                    )
+                }",
+                HttpStatus.UNPROCESSABLE_ENTITY
+            )
+
         val entity = DocumentEntity()
         entity.title = title
         entity.description = description
         entity.groupId = groupEntity.id
         entity.createdAt = Instant.now()
+        entity.fileType = extension
         entity.authorId = author.id
         entity.byteSize = fileSize;
 
@@ -57,7 +81,7 @@ class DocumentService(
 
         logger.info("The user \"${author.username}\" created a new document \"${title}\" in group \"${groupEntity.name}\"")
 
-        storageService.store(resource, entity, fileSize, this, filename)
+        storageService.store(resource, entity, fileSize, this, filename, extension)
 
         return entity
     }
